project2/skeleton2/subc.output
Grammar

    0 $accept: program $end

    1 program: ext_def_list

    2 ext_def_list: ext_def_list ext_def
    3             | %empty

    4 ext_def: opt_specifier ext_decl_list ';'
    5        | opt_specifier funct_decl compound_stmt

    6 ext_decl_list: ext_decl
    7              | ext_decl_list ',' ext_decl

    8 ext_decl: var_decl
    9         | funct_decl

   10 opt_specifier: type_specifier
   11              | %empty

   12 type_specifier: TYPE
   13               | struct_specifier

   14 struct_specifier: STRUCT opt_tag '{' def_list '}'
   15                 | STRUCT ID

   16 opt_tag: ID
   17        | %empty

   18 var_decl: ID
   19         | ID '[' ']'
   20         | ID '[' INTEGER_CONST ']'
   21         | '*' ID

   22 funct_decl: ID '(' ')'
   23           | ID '(' var_list ')'

   24 var_list: param_decl
   25         | var_list ',' param_decl

   26 param_decl: type_specifier var_decl

   27 def_list: def_list def
   28         | %empty

   29 def: type_specifier decl_list ';'

   30 decl_list: decl_list ',' decl
   31          | decl

   32 decl: funct_decl
   33     | var_decl

   34 compound_stmt: '{' local_defs stmt_list '}'

   35 local_defs: def_list

   36 stmt_list: stmt_list stmt
   37          | %empty

   38 stmt: expr ';'
   39     | compound_stmt
   40     | RETURN ';'
   41     | RETURN expr ';'
   42     | ';'
   43     | IF '(' test ')' stmt
   44     | IF '(' test ')' stmt ELSE stmt
   45     | WHILE '(' test ')' stmt
   46     | FOR '(' opt_expr ';' test ';' opt_expr ')' stmt
   47     | BREAK ';'
   48     | CONTINUE ';'

   49 test: expr
   50     | %empty

   51 opt_expr: expr
   52         | %empty

   53 expr: expr ASSINGOP expr
   54     | expr '=' expr
   55     | or_expr

   56 or_expr: or_list

   57 or_list: or_list LOGICAL_OR and_expr
   58        | or_list '|' and_expr
   59        | and_expr

   60 and_expr: and_list

   61 and_list: and_list LOGICAL_AND binary
   62         | and_list '&' binary
   63         | binary

   64 binary: binary RELOP binary
   65       | binary EQUOP binary
   66       | binary '*' binary
   67       | binary '/' binary
   68       | binary '%' binary
   69       | binary '+' binary
   70       | binary '-' binary
   71       | unary

   72 unary: '(' expr ')'
   73      | INTEGER_CONST
   74      | CHAR_CONST
   75      | ID
   76      | STRING
   77      | '-' unary
   78      | '!' unary
   79      | unary PLUS_PLUS
   80      | unary MINUS_MINUS
   81      | '&' unary
   82      | '*' unary
   83      | unary '[' expr ']'
   84      | unary STRUCTOP ID
   85      | unary '(' args ')'
   86      | unary '(' ')'

   87 args: expr
   88     | args ',' expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 78
'%' (37) 68
'&' (38) 62 81
'(' (40) 22 23 43 44 45 46 72 85 86
')' (41) 22 23 43 44 45 46 72 85 86
'*' (42) 21 66 82
'+' (43) 69
',' (44) 7 25 30 88
'-' (45) 70 77
'/' (47) 67
';' (59) 4 29 38 40 41 42 46 47 48
'=' (61) 54
'[' (91) 19 20 83
']' (93) 19 20 83
'{' (123) 14 34
'|' (124) 58
'}' (125) 14 34
error (256)
ASSINGOP (258) 53
LOGICAL_OR (259) 57
LOGICAL_AND (260) 61
EQUOP (261) 65
RELOP (262) 64
PLUS_PLUS (263) 79
MINUS_MINUS (264) 80
STRUCTOP (265) 84
TYPE (266) 12
STRUCT (267) 14 15
ID (268) 15 16 18 19 20 21 22 23 75 84
CHAR_CONST (269) 74
STRING (270) 76
INTEGER_CONST (271) 20 73
RETURN (272) 40 41
IF (273) 43 44
ELSE (274) 44
WHILE (275) 45
FOR (276) 46
BREAK (277) 47
CONTINUE (278) 48


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
program (42)
    on left: 1, on right: 0
ext_def_list (43)
    on left: 2 3, on right: 1 2
ext_def (44)
    on left: 4 5, on right: 2
ext_decl_list (45)
    on left: 6 7, on right: 4 7
ext_decl (46)
    on left: 8 9, on right: 6 7
opt_specifier (47)
    on left: 10 11, on right: 4 5
type_specifier (48)
    on left: 12 13, on right: 10 26 29
struct_specifier (49)
    on left: 14 15, on right: 13
opt_tag (50)
    on left: 16 17, on right: 14
var_decl (51)
    on left: 18 19 20 21, on right: 8 26 33
funct_decl (52)
    on left: 22 23, on right: 5 9 32
var_list (53)
    on left: 24 25, on right: 23 25
param_decl (54)
    on left: 26, on right: 24 25
def_list (55)
    on left: 27 28, on right: 14 27 35
def (56)
    on left: 29, on right: 27
decl_list (57)
    on left: 30 31, on right: 29 30
decl (58)
    on left: 32 33, on right: 30 31
compound_stmt (59)
    on left: 34, on right: 5 39
local_defs (60)
    on left: 35, on right: 34
stmt_list (61)
    on left: 36 37, on right: 34 36
stmt (62)
    on left: 38 39 40 41 42 43 44 45 46 47 48, on right: 36 43 44 45
    46
test (63)
    on left: 49 50, on right: 43 44 45 46
opt_expr (64)
    on left: 51 52, on right: 46
expr (65)
    on left: 53 54 55, on right: 38 41 49 51 53 54 72 83 87 88
or_expr (66)
    on left: 56, on right: 55
or_list (67)
    on left: 57 58 59, on right: 56 57 58
and_expr (68)
    on left: 60, on right: 57 58 59
and_list (69)
    on left: 61 62 63, on right: 60 61 62
binary (70)
    on left: 64 65 66 67 68 69 70 71, on right: 61 62 63 64 65 66 67
    68 69 70
unary (71)
    on left: 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86, on right:
    71 77 78 79 80 81 82 83 84 85 86
args (72)
    on left: 87 88, on right: 85 88


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (ext_def_list)

    program       go to state 1
    ext_def_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: ext_def_list .
    2 ext_def_list: ext_def_list . ext_def

    TYPE    shift, and go to state 4
    STRUCT  shift, and go to state 5

    $end      reduce using rule 1 (program)
    $default  reduce using rule 11 (opt_specifier)

    ext_def           go to state 6
    opt_specifier     go to state 7
    type_specifier    go to state 8
    struct_specifier  go to state 9


State 3

    0 $accept: program $end .

    $default  accept


State 4

   12 type_specifier: TYPE .

    $default  reduce using rule 12 (type_specifier)


State 5

   14 struct_specifier: STRUCT . opt_tag '{' def_list '}'
   15                 | STRUCT . ID

    ID  shift, and go to state 10

    $default  reduce using rule 17 (opt_tag)

    opt_tag  go to state 11


State 6

    2 ext_def_list: ext_def_list ext_def .

    $default  reduce using rule 2 (ext_def_list)


State 7

    4 ext_def: opt_specifier . ext_decl_list ';'
    5        | opt_specifier . funct_decl compound_stmt

    '*'  shift, and go to state 12
    ID   shift, and go to state 13

    ext_decl_list  go to state 14
    ext_decl       go to state 15
    var_decl       go to state 16
    funct_decl     go to state 17


State 8

   10 opt_specifier: type_specifier .

    $default  reduce using rule 10 (opt_specifier)


State 9

   13 type_specifier: struct_specifier .

    $default  reduce using rule 13 (type_specifier)


State 10

   15 struct_specifier: STRUCT ID .
   16 opt_tag: ID .

    '{'       reduce using rule 16 (opt_tag)
    $default  reduce using rule 15 (struct_specifier)


State 11

   14 struct_specifier: STRUCT opt_tag . '{' def_list '}'

    '{'  shift, and go to state 18


State 12

   21 var_decl: '*' . ID

    ID  shift, and go to state 19


State 13

   18 var_decl: ID .
   19         | ID . '[' ']'
   20         | ID . '[' INTEGER_CONST ']'
   22 funct_decl: ID . '(' ')'
   23           | ID . '(' var_list ')'

    '['  shift, and go to state 20
    '('  shift, and go to state 21

    $default  reduce using rule 18 (var_decl)


State 14

    4 ext_def: opt_specifier ext_decl_list . ';'
    7 ext_decl_list: ext_decl_list . ',' ext_decl

    ','  shift, and go to state 22
    ';'  shift, and go to state 23


State 15

    6 ext_decl_list: ext_decl .

    $default  reduce using rule 6 (ext_decl_list)


State 16

    8 ext_decl: var_decl .

    $default  reduce using rule 8 (ext_decl)


State 17

    5 ext_def: opt_specifier funct_decl . compound_stmt
    9 ext_decl: funct_decl .

    '{'  shift, and go to state 24

    $default  reduce using rule 9 (ext_decl)

    compound_stmt  go to state 25


State 18

   14 struct_specifier: STRUCT opt_tag '{' . def_list '}'

    $default  reduce using rule 28 (def_list)

    def_list  go to state 26


State 19

   21 var_decl: '*' ID .

    $default  reduce using rule 21 (var_decl)


State 20

   19 var_decl: ID '[' . ']'
   20         | ID '[' . INTEGER_CONST ']'

    ']'            shift, and go to state 27
    INTEGER_CONST  shift, and go to state 28


State 21

   22 funct_decl: ID '(' . ')'
   23           | ID '(' . var_list ')'

    ')'     shift, and go to state 29
    TYPE    shift, and go to state 4
    STRUCT  shift, and go to state 5

    type_specifier    go to state 30
    struct_specifier  go to state 9
    var_list          go to state 31
    param_decl        go to state 32


State 22

    7 ext_decl_list: ext_decl_list ',' . ext_decl

    '*'  shift, and go to state 12
    ID   shift, and go to state 13

    ext_decl    go to state 33
    var_decl    go to state 16
    funct_decl  go to state 34


State 23

    4 ext_def: opt_specifier ext_decl_list ';' .

    $default  reduce using rule 4 (ext_def)


State 24

   34 compound_stmt: '{' . local_defs stmt_list '}'

    $default  reduce using rule 28 (def_list)

    def_list    go to state 35
    local_defs  go to state 36


State 25

    5 ext_def: opt_specifier funct_decl compound_stmt .

    $default  reduce using rule 5 (ext_def)


State 26

   14 struct_specifier: STRUCT opt_tag '{' def_list . '}'
   27 def_list: def_list . def

    TYPE    shift, and go to state 4
    STRUCT  shift, and go to state 5
    '}'     shift, and go to state 37

    type_specifier    go to state 38
    struct_specifier  go to state 9
    def               go to state 39


State 27

   19 var_decl: ID '[' ']' .

    $default  reduce using rule 19 (var_decl)


State 28

   20 var_decl: ID '[' INTEGER_CONST . ']'

    ']'  shift, and go to state 40


State 29

   22 funct_decl: ID '(' ')' .

    $default  reduce using rule 22 (funct_decl)


State 30

   26 param_decl: type_specifier . var_decl

    '*'  shift, and go to state 12
    ID   shift, and go to state 41

    var_decl  go to state 42


State 31

   23 funct_decl: ID '(' var_list . ')'
   25 var_list: var_list . ',' param_decl

    ','  shift, and go to state 43
    ')'  shift, and go to state 44


State 32

   24 var_list: param_decl .

    $default  reduce using rule 24 (var_list)


State 33

    7 ext_decl_list: ext_decl_list ',' ext_decl .

    $default  reduce using rule 7 (ext_decl_list)


State 34

    9 ext_decl: funct_decl .

    $default  reduce using rule 9 (ext_decl)


State 35

   27 def_list: def_list . def
   35 local_defs: def_list .

    TYPE    shift, and go to state 4
    STRUCT  shift, and go to state 5

    $default  reduce using rule 35 (local_defs)

    type_specifier    go to state 38
    struct_specifier  go to state 9
    def               go to state 39


State 36

   34 compound_stmt: '{' local_defs . stmt_list '}'

    $default  reduce using rule 37 (stmt_list)

    stmt_list  go to state 45


State 37

   14 struct_specifier: STRUCT opt_tag '{' def_list '}' .

    $default  reduce using rule 14 (struct_specifier)


State 38

   29 def: type_specifier . decl_list ';'

    '*'  shift, and go to state 12
    ID   shift, and go to state 13

    var_decl    go to state 46
    funct_decl  go to state 47
    decl_list   go to state 48
    decl        go to state 49


State 39

   27 def_list: def_list def .

    $default  reduce using rule 27 (def_list)


State 40

   20 var_decl: ID '[' INTEGER_CONST ']' .

    $default  reduce using rule 20 (var_decl)


State 41

   18 var_decl: ID .
   19         | ID . '[' ']'
   20         | ID . '[' INTEGER_CONST ']'

    '['  shift, and go to state 20

    $default  reduce using rule 18 (var_decl)


State 42

   26 param_decl: type_specifier var_decl .

    $default  reduce using rule 26 (param_decl)


State 43

   25 var_list: var_list ',' . param_decl

    TYPE    shift, and go to state 4
    STRUCT  shift, and go to state 5

    type_specifier    go to state 30
    struct_specifier  go to state 9
    param_decl        go to state 50


State 44

   23 funct_decl: ID '(' var_list ')' .

    $default  reduce using rule 23 (funct_decl)


State 45

   34 compound_stmt: '{' local_defs stmt_list . '}'
   36 stmt_list: stmt_list . stmt

    '&'            shift, and go to state 51
    '-'            shift, and go to state 52
    '*'            shift, and go to state 53
    '!'            shift, and go to state 54
    '('            shift, and go to state 55
    ID             shift, and go to state 56
    CHAR_CONST     shift, and go to state 57
    STRING         shift, and go to state 58
    INTEGER_CONST  shift, and go to state 59
    RETURN         shift, and go to state 60
    IF             shift, and go to state 61
    WHILE          shift, and go to state 62
    FOR            shift, and go to state 63
    BREAK          shift, and go to state 64
    CONTINUE       shift, and go to state 65
    ';'            shift, and go to state 66
    '{'            shift, and go to state 24
    '}'            shift, and go to state 67

    compound_stmt  go to state 68
    stmt           go to state 69
    expr           go to state 70
    or_expr        go to state 71
    or_list        go to state 72
    and_expr       go to state 73
    and_list       go to state 74
    binary         go to state 75
    unary          go to state 76


State 46

   33 decl: var_decl .

    $default  reduce using rule 33 (decl)


State 47

   32 decl: funct_decl .

    $default  reduce using rule 32 (decl)


State 48

   29 def: type_specifier decl_list . ';'
   30 decl_list: decl_list . ',' decl

    ','  shift, and go to state 77
    ';'  shift, and go to state 78


State 49

   31 decl_list: decl .

    $default  reduce using rule 31 (decl_list)


State 50

   25 var_list: var_list ',' param_decl .

    $default  reduce using rule 25 (var_list)


State 51

   81 unary: '&' . unary

    '&'            shift, and go to state 51
    '-'            shift, and go to state 52
    '*'            shift, and go to state 53
    '!'            shift, and go to state 54
    '('            shift, and go to state 55
    ID             shift, and go to state 56
    CHAR_CONST     shift, and go to state 57
    STRING         shift, and go to state 58
    INTEGER_CONST  shift, and go to state 59

    unary  go to state 79


State 52

   77 unary: '-' . unary

    '&'            shift, and go to state 51
    '-'            shift, and go to state 52
    '*'            shift, and go to state 53
    '!'            shift, and go to state 54
    '('            shift, and go to state 55
    ID             shift, and go to state 56
    CHAR_CONST     shift, and go to state 57
    STRING         shift, and go to state 58
    INTEGER_CONST  shift, and go to state 59

    unary  go to state 80


State 53

   82 unary: '*' . unary

    '&'            shift, and go to state 51
    '-'            shift, and go to state 52
    '*'            shift, and go to state 53
    '!'            shift, and go to state 54
    '('            shift, and go to state 55
    ID             shift, and go to state 56
    CHAR_CONST     shift, and go to state 57
    STRING         shift, and go to state 58
    INTEGER_CONST  shift, and go to state 59

    unary  go to state 81


State 54

   78 unary: '!' . unary

    '&'            shift, and go to state 51
    '-'            shift, and go to state 52
    '*'            shift, and go to state 53
    '!'            shift, and go to state 54
    '('            shift, and go to state 55
    ID             shift, and go to state 56
    CHAR_CONST     shift, and go to state 57
    STRING         shift, and go to state 58
    INTEGER_CONST  shift, and go to state 59

    unary  go to state 82


State 55

   72 unary: '(' . expr ')'

    '&'            shift, and go to state 51
    '-'            shift, and go to state 52
    '*'            shift, and go to state 53
    '!'            shift, and go to state 54
    '('            shift, and go to state 55
    ID             shift, and go to state 56
    CHAR_CONST     shift, and go to state 57
    STRING         shift, and go to state 58
    INTEGER_CONST  shift, and go to state 59

    expr      go to state 83
    or_expr   go to state 71
    or_list   go to state 72
    and_expr  go to state 73
    and_list  go to state 74
    binary    go to state 75
    unary     go to state 76


State 56

   75 unary: ID .

    $default  reduce using rule 75 (unary)


State 57

   74 unary: CHAR_CONST .

    $default  reduce using rule 74 (unary)


State 58

   76 unary: STRING .

    $default  reduce using rule 76 (unary)


State 59

   73 unary: INTEGER_CONST .

    $default  reduce using rule 73 (unary)


State 60

   40 stmt: RETURN . ';'
   41     | RETURN . expr ';'

    '&'            shift, and go to state 51
    '-'            shift, and go to state 52
    '*'            shift, and go to state 53
    '!'            shift, and go to state 54
    '('            shift, and go to state 55
    ID             shift, and go to state 56
    CHAR_CONST     shift, and go to state 57
    STRING         shift, and go to state 58
    INTEGER_CONST  shift, and go to state 59
    ';'            shift, and go to state 84

    expr      go to state 85
    or_expr   go to state 71
    or_list   go to state 72
    and_expr  go to state 73
    and_list  go to state 74
    binary    go to state 75
    unary     go to state 76


State 61

   43 stmt: IF . '(' test ')' stmt
   44     | IF . '(' test ')' stmt ELSE stmt

    '('  shift, and go to state 86


State 62

   45 stmt: WHILE . '(' test ')' stmt

    '('  shift, and go to state 87


State 63

   46 stmt: FOR . '(' opt_expr ';' test ';' opt_expr ')' stmt

    '('  shift, and go to state 88


State 64

   47 stmt: BREAK . ';'

    ';'  shift, and go to state 89


State 65

   48 stmt: CONTINUE . ';'

    ';'  shift, and go to state 90


State 66

   42 stmt: ';' .

    $default  reduce using rule 42 (stmt)


State 67

   34 compound_stmt: '{' local_defs stmt_list '}' .

    $default  reduce using rule 34 (compound_stmt)


State 68

   39 stmt: compound_stmt .

    $default  reduce using rule 39 (stmt)


State 69

   36 stmt_list: stmt_list stmt .

    $default  reduce using rule 36 (stmt_list)


State 70

   38 stmt: expr . ';'
   53 expr: expr . ASSINGOP expr
   54     | expr . '=' expr

    ASSINGOP  shift, and go to state 91
    '='       shift, and go to state 92
    ';'       shift, and go to state 93


State 71

   55 expr: or_expr .

    $default  reduce using rule 55 (expr)


State 72

   56 or_expr: or_list .
   57 or_list: or_list . LOGICAL_OR and_expr
   58        | or_list . '|' and_expr

    LOGICAL_OR  shift, and go to state 94
    '|'         shift, and go to state 95

    $default  reduce using rule 56 (or_expr)


State 73

   59 or_list: and_expr .

    $default  reduce using rule 59 (or_list)


State 74

   60 and_expr: and_list .
   61 and_list: and_list . LOGICAL_AND binary
   62         | and_list . '&' binary

    LOGICAL_AND  shift, and go to state 96
    '&'          shift, and go to state 97

    $default  reduce using rule 60 (and_expr)


State 75

   63 and_list: binary .
   64 binary: binary . RELOP binary
   65       | binary . EQUOP binary
   66       | binary . '*' binary
   67       | binary . '/' binary
   68       | binary . '%' binary
   69       | binary . '+' binary
   70       | binary . '-' binary

    EQUOP  shift, and go to state 98
    RELOP  shift, and go to state 99
    '+'    shift, and go to state 100
    '-'    shift, and go to state 101
    '*'    shift, and go to state 102
    '%'    shift, and go to state 103
    '/'    shift, and go to state 104

    $default  reduce using rule 63 (and_list)


State 76

   71 binary: unary .
   79 unary: unary . PLUS_PLUS
   80      | unary . MINUS_MINUS
   83      | unary . '[' expr ']'
   84      | unary . STRUCTOP ID
   85      | unary . '(' args ')'
   86      | unary . '(' ')'

    PLUS_PLUS    shift, and go to state 105
    MINUS_MINUS  shift, and go to state 106
    STRUCTOP     shift, and go to state 107
    '['          shift, and go to state 108
    '('          shift, and go to state 109

    $default  reduce using rule 71 (binary)


State 77

   30 decl_list: decl_list ',' . decl

    '*'  shift, and go to state 12
    ID   shift, and go to state 13

    var_decl    go to state 46
    funct_decl  go to state 47
    decl        go to state 110


State 78

   29 def: type_specifier decl_list ';' .

    $default  reduce using rule 29 (def)


State 79

   79 unary: unary . PLUS_PLUS
   80      | unary . MINUS_MINUS
   81      | '&' unary .
   83      | unary . '[' expr ']'
   84      | unary . STRUCTOP ID
   85      | unary . '(' args ')'
   86      | unary . '(' ')'

    PLUS_PLUS    shift, and go to state 105
    MINUS_MINUS  shift, and go to state 106
    STRUCTOP     shift, and go to state 107
    '['          shift, and go to state 108
    '('          shift, and go to state 109

    $default  reduce using rule 81 (unary)


State 80

   77 unary: '-' unary .
   79      | unary . PLUS_PLUS
   80      | unary . MINUS_MINUS
   83      | unary . '[' expr ']'
   84      | unary . STRUCTOP ID
   85      | unary . '(' args ')'
   86      | unary . '(' ')'

    PLUS_PLUS    shift, and go to state 105
    MINUS_MINUS  shift, and go to state 106
    STRUCTOP     shift, and go to state 107
    '['          shift, and go to state 108
    '('          shift, and go to state 109

    $default  reduce using rule 77 (unary)


State 81

   79 unary: unary . PLUS_PLUS
   80      | unary . MINUS_MINUS
   82      | '*' unary .
   83      | unary . '[' expr ']'
   84      | unary . STRUCTOP ID
   85      | unary . '(' args ')'
   86      | unary . '(' ')'

    PLUS_PLUS    shift, and go to state 105
    MINUS_MINUS  shift, and go to state 106
    STRUCTOP     shift, and go to state 107
    '['          shift, and go to state 108
    '('          shift, and go to state 109

    $default  reduce using rule 82 (unary)


State 82

   78 unary: '!' unary .
   79      | unary . PLUS_PLUS
   80      | unary . MINUS_MINUS
   83      | unary . '[' expr ']'
   84      | unary . STRUCTOP ID
   85      | unary . '(' args ')'
   86      | unary . '(' ')'

    PLUS_PLUS    shift, and go to state 105
    MINUS_MINUS  shift, and go to state 106
    STRUCTOP     shift, and go to state 107
    '['          shift, and go to state 108
    '('          shift, and go to state 109

    $default  reduce using rule 78 (unary)


State 83

   53 expr: expr . ASSINGOP expr
   54     | expr . '=' expr
   72 unary: '(' expr . ')'

    ASSINGOP  shift, and go to state 91
    '='       shift, and go to state 92
    ')'       shift, and go to state 111


State 84

   40 stmt: RETURN ';' .

    $default  reduce using rule 40 (stmt)


State 85

   41 stmt: RETURN expr . ';'
   53 expr: expr . ASSINGOP expr
   54     | expr . '=' expr

    ASSINGOP  shift, and go to state 91
    '='       shift, and go to state 92
    ';'       shift, and go to state 112


State 86

   43 stmt: IF '(' . test ')' stmt
   44     | IF '(' . test ')' stmt ELSE stmt

    '&'            shift, and go to state 51
    '-'            shift, and go to state 52
    '*'            shift, and go to state 53
    '!'            shift, and go to state 54
    '('            shift, and go to state 55
    ID             shift, and go to state 56
    CHAR_CONST     shift, and go to state 57
    STRING         shift, and go to state 58
    INTEGER_CONST  shift, and go to state 59

    $default  reduce using rule 50 (test)

    test      go to state 113
    expr      go to state 114
    or_expr   go to state 71
    or_list   go to state 72
    and_expr  go to state 73
    and_list  go to state 74
    binary    go to state 75
    unary     go to state 76


State 87

   45 stmt: WHILE '(' . test ')' stmt

    '&'            shift, and go to state 51
    '-'            shift, and go to state 52
    '*'            shift, and go to state 53
    '!'            shift, and go to state 54
    '('            shift, and go to state 55
    ID             shift, and go to state 56
    CHAR_CONST     shift, and go to state 57
    STRING         shift, and go to state 58
    INTEGER_CONST  shift, and go to state 59

    $default  reduce using rule 50 (test)

    test      go to state 115
    expr      go to state 114
    or_expr   go to state 71
    or_list   go to state 72
    and_expr  go to state 73
    and_list  go to state 74
    binary    go to state 75
    unary     go to state 76


State 88
